Format a tag globally & Add Link to navigator & Fix box size changed when hover text by altering letter-spacing

--- a/src/components/Commons/CustomDropdown/styles.module.scss
+++ b/src/components/Commons/CustomDropdown/styles.module.scss
@@ -5,6 +5,7 @@
     margin-top: 10px;
     border-radius: 8px;
     background-color: var(--color-blue);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     color: white;
 
     position: absolute;
@@ -17,4 +18,5 @@
 .dropdown div:hover {
     font-weight: bolder;
     cursor: pointer;
+    letter-spacing: -0.015em;
 }
